xliff-22/test-suite/core/invalid/bad_TwoSourceInUnit.xlf
<?xml version="1.0"?>
<xliff xmlns="urn:oasis:names:tc:xliff:document:2.2" version="2.2" srcLang="en">
 <file id="f1">
  <unit id="1">
   <segment id="s1">
    <source>source</source>
    <source>target</source>
   </segment>
  </unit>
 </file>
</xliff>
